--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "dependencies": {
     "axios": "^0.18.1",
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "mysql": "^2.13.0",
     "prop-types": "^15.7.2",
