Installed dependencies for react router dom

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,10 @@
         "es6": true,
         "node": true
     },
-    "extends": "airbnb",
+    "extends": [
+        "plugin:react/recommended",
+        "airbnb"
+    ],
     "globals": {
         "Atomics": "readonly",
         "SharedArrayBuffer": "readonly"
