--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "webpack-cli": "^3.3.0"
   },
   "dependencies": {
+    "ansi-regex": "^5.0.0",
     "axios": "^0.18.1",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
