--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
+    "react-google-login": "^5.1.3",
     "react-router-dom": "^5.1.2"
   }
 }
