--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-google-login": "^5.1.3",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "socket.io": "^2.3.0"
   }
 }
