--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^16.8.5",
     "react-google-login": "^5.1.3",
     "react-router-dom": "^5.1.2",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0"
   }
 }
