--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ansi-regex": "^5.0.0",
     "axios": "^0.18.1",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "mysql": "^2.13.0",
