--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
+    "moment": "^2.24.0",
     "mysql": "^2.13.0",
     "node-ipinfo": "^1.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-google-login": "^5.1.3",
+    "react-moment": "^0.9.7",
     "react-router-dom": "^5.1.2",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0"
