--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
+    "react-fade-in": "^0.1.8",
     "react-google-login": "^5.1.3",
     "react-moment": "^0.9.7",
     "react-router-dom": "^5.1.2",
