(refactor) changed name and author

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "mvp-stater-kit",
+  "name": "howdy",
   "scripts": {
     "start": "node server/index.js",
     "start:client": "webpack --config webpack.config.js --mode development --watch",
     "build": "webpack --config webpack.config.js --mode production",
     "lint": "eslint . --ext .js,.jsx"
   },
-  "author": "Beth Johnson",
+  "author": "Team Tauros",
   "devDependencies": {
     "@babel/core": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
