--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-google-login": "^5.1.3",
     "react-moment": "^0.9.7",
     "react-router-dom": "^5.1.2",
+    "react-select": "^3.1.0",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0"
   }
