--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-moment": "^0.9.7",
     "react-router-dom": "^5.1.2",
     "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "twilio": "^3.42.2"
   }
 }
