--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-moment": "^0.9.7",
     "react-router-dom": "^5.1.2",
     "react-select": "^3.1.0",
+    "semantic-ui-react": "^0.88.2",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0"
   }
