--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.16.4",
     "moment": "^2.24.0",
     "mysql": "^2.13.0",
+    "node-cron": "^2.0.3",
     "node-ipinfo": "^1.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.5",
