--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
+    "file-loader": "^6.0.0",
     "moment": "^2.24.0",
     "mysql": "^2.13.0",
     "node-cron": "^2.0.3",
