installed google api dependencies

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
+    "superagent": "^5.2.2",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0"
   },
@@ -28,6 +29,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
+    "googleapis": "^39.2.0",
     "moment": "^2.24.0",
     "mysql": "^2.13.0",
     "node-ipinfo": "^1.0.1",
