--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "node-ipinfo": "^1.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.5",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.8.5",
     "react-fade-in": "^0.1.8",
     "react-google-login": "^5.1.3",
