--- a/package.json
+++ b/package.json
@@ -45,10 +45,7 @@
     "semantic-ui-react": "^0.88.2",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
-<<<<<<< HEAD
-    "twilio": "^3.42.2"
-=======
+    "twilio": "^3.42.2",
     "styled-components": "^5.1.0"
->>>>>>> fa9681ce7f3c7d848fc0f3d7aa043d2f5c966bef
   }
 }
