--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "semantic-ui-react": "^0.88.2",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
-    "twilio": "^3.42.2"
+    "twilio": "^3.42.2",
     "styled-components": "^5.1.0"
   }
 }
