--- a/package.json
+++ b/package.json
@@ -29,15 +29,20 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
-    "googleapis": "^39.2.0",
     "file-loader": "^6.0.0",
+    "google-auth-library": "^6.0.0",
+    "googleapis": "^39.2.0",
     "moment": "^2.24.0",
     "mysql": "^2.13.0",
     "node-cron": "^2.0.3",
     "node-ipinfo": "^1.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.5",
+    "react-add-to-calendar": "^0.1.5",
+    "react-add-to-calendar-hoc": "^1.0.9",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.8.5",
+    "react-dropdown": "^1.7.0",
     "react-fade-in": "^0.1.8",
     "react-google-login": "^5.1.3",
     "react-moment": "^0.9.7",
@@ -46,7 +51,7 @@
     "semantic-ui-react": "^0.88.2",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
-    "twilio": "^3.42.2",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.0",
+    "twilio": "^3.42.2"
   }
 }
